--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<h1>reCAPTCHA</h1>
 <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdDauYiAAAAALkJUf9stKJJEYdZI1fJi5aVAH8l"></script>
 <script>
 grecaptcha.enterprise.ready(function() {
